fix(article): fix article tag overflow
closes https://github.com/CaiJimmy/hugo-theme-stack/issues/4

--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -101,6 +101,10 @@
                     stroke-width: 1.33;
                 }
             }
+
+            .article-tags {
+                flex-wrap: wrap;
+            }
         }
     }
 }
